# productivity-music-mcp

./: .env.example  .gitignore  AGENTS.md  HACKATHON_REQUIREMENTS.md  README.md  pyproject.toml
docs/: focus-music-guide.md  gmi-cloud-api-reference.md  gmi-cloud-services.md  gmi-creative-workflows.md  gmi-inference-models.md
scripts/: generate_music.py  test-keys.sh
src/: __init__.py  dj_agent.py  player.py  server.py  state.py  statusline.py  tui.py
src/sources/: __init__.py  brainfm.py  freesound.py  local_cache.py  lyria.py  minimax_music.py  procedural.py  youtube.py
