[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focusline"
version = "0.1.0"
description = "FocusLine — AI-powered focus music + Pomodoro timer for coding CLIs, powered by GLM DJ agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
youtube = ["yt-dlp>=2024.0.0"]

[project.scripts]
productivity-music-mcp = "src:main"
productivity-music = "src.tui:main"
productivity-music-status = "src.statusline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
